--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/washex)](https://CRAN.R-project.org/package=washex)
 [![R-CMD-check](https://github.com/rwrandles/washex-r/workflows/R-CMD-check/badge.svg)](https://github.com/rwrandles/washex-r/actions)
+[![Travis build status](https://travis-ci.com/rwrandles/washex-r.svg?branch=main)](https://travis-ci.com/rwrandles/washex-r)
 <!-- badges: end -->
 
 The **Wash**ington **Ex**plorer (WashEx) package creates an interface between R and the [Washington State Legislative Web Services](wslwebservices.leg.wa.gov). It serves as a companion to [Legislative Explorer: Washington](legex.org/wa/process), a project developed by John Wilkerson and Rohnin Randles at the University of Washington. The package contains functions to retrieve data regarding the following:
