Update host prefixes for https, correct illegal URLs, and rectify errors due to recent curl updates

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.com/rwrandles/washex-r.svg?branch=main)](https://app.travis-ci.com/rwrandles/washex-r.svg?branch=main)
 <!-- badges: end -->
 
-The **Wash**ington **Ex**plorer (WashEx) package creates an interface between R and the [Washington State Legislative Web Services](http://wslwebservices.leg.wa.gov). It serves as a companion to [Legislative Explorer: Washington](http://legex.org/wa/process), a project developed by John Wilkerson and Rohnin Randles at the University of Washington. The package contains functions to retrieve data regarding the following:
+The **Wash**ington **Ex**plorer (WashEx) package creates an interface between R and the [Washington State Legislative Web Services](https://wslwebservices.leg.wa.gov). It serves as a companion to [Legislative Explorer: Washington](http://legex.org/wa/process), a project developed by John Wilkerson and Rohnin Randles at the University of Washington. The package contains functions to retrieve data regarding the following:
 
   * Bill summaries
   * Roll calls
